more logic stuff for game

--- a/style.css
+++ b/style.css
@@ -1,10 +1,10 @@
-body {
+/*body {*/
   /*text-align: center;*/
   /*background-color: black;*/
-  margin: 300px 0 0 0;
+  /*margin: 300px 0 0 0;*/
   /*color: white;*/
-}
-
+/*}*/
+/*
 .buttonHolder {
   text-align: center;
 }
@@ -20,7 +20,7 @@ body {
 
 }
 
-.scoreA .scoreB {
+.scoreA .scoreB {*/
   /*text-indent: 50px;*/
 }
 
