--- a/style.css
+++ b/style.css
@@ -6,7 +6,8 @@
 /*}*/
 
 body {
-  background-color: #BCB696;
+  /*background-color: #BCB696;*/
+  background-image: url('https://static1.squarespace.com/static/578bc0fa20099e823fde42d3/5797f4836a4963e7ed20a49e/5797f483be6594e06f6d70c4/1469576326921/table2.jpg?format=1500w');
 }
 
 .buttonHolder {
@@ -16,11 +17,18 @@ body {
 .playerA {
   float: left;
   font-size: 30px;
+  color: #BCB696;
+  text-shadow: 2px 2px 8px black;
+  font-size: 40px;
+
 }
 
 .playerB {
  float: right;
  font-size: 30px;
+ color: #C0B989;
+ text-shadow: 2px 2px 8px black;
+ font-size: 40px;
 
 }
 
@@ -28,15 +36,87 @@ body {
   /*text-indent: 50px;*/
 }
 
-.card {
+.handA {
   display: inline-block;
   width: 150px;
   height: 200px;
   vertical-align: middle;
   text-align: center;
   line-height: 100px;
-  margin: 30px 20px 20px 60px;
+  margin: 100px 20px 20px 20px;
+  border: 1px solid black;
+  background-color: #BCB696;
+}
+
+.deckA {
+  display: inline-block;
+  width: 150px;
+  height: 200px;
+  vertical-align: middle;
+  text-align: center;
+  line-height: 100px;
+  margin: 60px 20px 20px 60px;
   border: 1px solid black;
   background-color: green;
-
+  background-image: url('https://s-media-cache-ak0.pinimg.com/564x/75/69/61/7569619b471a336cf8c9767ba3e7bf89.jpg');
+  background-size: 100% 100%;
 }
+
+.handB {
+  display: inline-block;
+  width: 150px;
+  height: 200px;
+  vertical-align: middle;
+  text-align: center;
+  line-height: 100px;
+  margin: 10px 20px 20px 296px;
+  border: 1px solid black;
+  background-color: #BCB696;
+}
+
+.deckB {
+  display: inline-block;
+  width: 150px;
+  height: 200px;
+  vertical-align: middle;
+  text-align: center;
+  line-height: 100px;
+  margin: 100px 20px 20px 20px;
+  border: 1px solid black;
+  background-color: green;
+  background-image: url('https://s-media-cache-ak0.pinimg.com/564x/75/69/61/7569619b471a336cf8c9767ba3e7bf89.jpg');
+  background-size: 100% 100%;
+}
+
+.start {
+  float: left;
+  margin: 0 0 0 140px;
+  background-color: #B6B1A7;
+  border: 2px solid #797672;
+  /*color: white;*/
+  font-weight: bold;
+  font-size: 15px;
+  padding: 10px 20px;
+  width: 120px;
+  height: 40px;
+  /*text-transform: uppercase;*/
+  background-image: url('')
+  /*background-size: 100% 100%;*/
+}
+
+.hit {
+  float: right;
+  margin: 0 140px 0 0;
+  background-color: #B6B1A7;
+  border: 2px solid #797672;
+  font-weight: bold;
+  font-size: 15px;
+  width: 120px;
+  height: 40px;
+  /*color: white;*/
+  padding: 10px 20px;
+  /*text-transform: uppercase;*/
+  /*background-image: url('http://datacouch.pw/wp-content/uploads/2016/07/wood-floor-small-bedroom-ideas-lphelp-dark-wood-floors-background-770x512.jpeg')*/
+  /*background-size: 100% 100%;*/
+}
+
