--- a/style.css
+++ b/style.css
@@ -1,12 +1,5 @@
-/*body {*/
-  /*text-align: center;*/
-  /*background-color: black;*/
-  /*margin: 300px 0 0 0;*/
-  /*color: white;*/
-/*}*/
 
 body {
-  /*background-color: #BCB696;*/
   background-image: url('https://static1.squarespace.com/static/578bc0fa20099e823fde42d3/5797f4836a4963e7ed20a49e/5797f483be6594e06f6d70c4/1469576326921/table2.jpg?format=1500w');
 }
 
@@ -32,20 +25,16 @@ body {
 
 }
 
-.scoreA .scoreB {
-  /*text-indent: 50px;*/
-}
-
 .handA {
   display: inline-block;
   width: 150px;
   height: 200px;
   vertical-align: middle;
   text-align: center;
-  line-height: 100px;
+  line-height: 210px;
   margin: 100px 20px 20px 20px;
   border: 1px solid black;
-  background-color: #BCB696;
+  background-color: rgba(187, 182, 149, 0.45);
 }
 
 .deckA {
@@ -55,7 +44,7 @@ body {
   vertical-align: middle;
   text-align: center;
   line-height: 100px;
-  margin: 60px 20px 20px 60px;
+  margin: 100px 20px 20px 100px;
   border: 1px solid black;
   background-color: green;
   background-image: url('https://s-media-cache-ak0.pinimg.com/564x/75/69/61/7569619b471a336cf8c9767ba3e7bf89.jpg');
@@ -68,10 +57,10 @@ body {
   height: 200px;
   vertical-align: middle;
   text-align: center;
-  line-height: 100px;
-  margin: 10px 20px 20px 296px;
+  line-height: 210px;
+  margin: 0px 20px 90px 296px;
   border: 1px solid black;
-  background-color: #BCB696;
+  background-color: rgba(187, 182, 149, 0.45);
 }
 
 .deckB {
@@ -81,7 +70,7 @@ body {
   vertical-align: middle;
   text-align: center;
   line-height: 100px;
-  margin: 100px 20px 20px 20px;
+  margin: 0px 20px 90px 20px;
   border: 1px solid black;
   background-color: green;
   background-image: url('https://s-media-cache-ak0.pinimg.com/564x/75/69/61/7569619b471a336cf8c9767ba3e7bf89.jpg');
@@ -93,15 +82,12 @@ body {
   margin: 0 0 0 140px;
   background-color: #B6B1A7;
   border: 2px solid #797672;
-  /*color: white;*/
   font-weight: bold;
   font-size: 15px;
   padding: 10px 20px;
   width: 120px;
   height: 40px;
-  /*text-transform: uppercase;*/
   background-image: url('')
-  /*background-size: 100% 100%;*/
 }
 
 .hit {
@@ -119,4 +105,21 @@ body {
   /*background-image: url('http://datacouch.pw/wp-content/uploads/2016/07/wood-floor-small-bedroom-ideas-lphelp-dark-wood-floors-background-770x512.jpeg')*/
   /*background-size: 100% 100%;*/
 }
+
+.deckAamount {
+  display: inline-block;
+  width: 250px;
+  height: 100px;
+  vertical-align: middle;
+  text-align: center;
+  line-height: 25px;
+  margin: 0px 20px 20px 145px;
+  border: 1px solid black;
+  background-color: rgba(187, 182, 149, 0.45);
+  font-weight: bold;
+  font-size: 20px;
+  color: black;
+  text-shadow: 2px 2px 8px #4f5336;
+}
+
 
