--- a/style.css
+++ b/style.css
@@ -35,6 +35,7 @@ body {
   margin: 100px 20px 20px 20px;
   border: 1px solid black;
   background-color: rgba(187, 182, 149, 0.45);
+  font-size: 60px;
 }
 
 .deckA {
@@ -61,6 +62,7 @@ body {
   margin: 0px 20px 90px 296px;
   border: 1px solid black;
   background-color: rgba(187, 182, 149, 0.45);
+  font-size: 60px;
 }
 
 .deckB {
